# Awesome-demo

./: README.md
AgentsTest/openai-agents-test/: .env.example  main.py  pyproject.toml
AgentsTest/openai-agents-test/ipynbs/: image_glm.ipynb  input_guardrails.ipynb  memory.json  memory_dict.ipynb  memory_men0.ipynb  output_guadrails.ipynb  qwen_agent.ipynb  qwen_agent.py  qwen_agent_langtrace.py
AgentsTest/openai-agents-test/mds/: input_guardrails.md  output_guadrails.md
AgentsTest/rag_rong/: .env.example  README.md  app.py  blog_tutorial.md  pyproject.toml  store.py
Backend/flask/: flask_limiter_test.py
Data_Structures_and_Algorithms/: DFS_Explanation.ipynb  Disjoint_Set_Union_Explanation.ipynb  Dynamic_Programming_Explanation.ipynb  Sliding_Window_Explanation.ipynb  pyproject.toml  test.py
Database/opensearch_test/: .env.example  .gitignore  docker-compose.yml  main.py  opensearch_crud.py  opensearch_openai_vector_search.py  opensearch_vector_search.py  pyproject.toml
Distributed-Tracing/: main.py  pyproject.toml  简易分布式追踪系统.ipynb
Frontend/react/: React_Learning_Outline.md
Fullstack/github_auth/: .gitignore  README.md  app.py  mermaid.txt  package-lock.json  package.json  pyproject.toml
Fullstack/github_auth/public/: index.html
Fullstack/github_auth/src/: App.css  App.js  index.css
Fullstack/pdf_search_app/: README.md  docker-compose.yml
Fullstack/pdf_search_app/backend/: .env  (+2 more)
McpsTest/amap-mcp-server/: amap-mcp-server.md
McpsTest/git_ingest/: git_ingest.md
Small_but_Power_Python_Library/: griffe_intro_cn.ipynb  my_module.py  pyproject.toml
(+8 files in other folders)
